some comments added to v2 ipynb file while explaining

--- a/v2/credit_risk_assessment_v2.ipynb
+++ b/v2/credit_risk_assessment_v2.ipynb
@@ -695,6 +695,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here we are cleaning the text from the un-neaded symbols like uhnderscore _ , as models understands numbers!"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 407,
       "metadata": {
@@ -1113,6 +1120,13 @@
       "source": [
         "df = df.applymap(text_cleaning).replace(['', 'nan', '!@9#%8', '#F%$D@*&8'], np.NaN)\n",
         "df.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here we are converting the type of datasets to the applicable types."
       ]
     },
     {
@@ -9505,7 +9519,7 @@
         "id": "IJ8VEhKdzb0F"
       },
       "source": [
-        "Checking for scaling, it feels its working correctly"
+        "Checking for encoding, it feels its working correctly"
       ]
     },
     {
